<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.echomind</groupId>
    <artifactId>echomind</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>EchoMind AI Agent Platform</name>
    <description>An AI Agent platform with MCP &amp; Skill marketplace</description>

    <modules>
        <module>echomind-common</module>
        <module>echomind-llm</module>
        <module>echomind-memory</module>
        <module>echomind-mcp</module>
        <module>echomind-skill-api</module>
        <module>echomind-skill</module>
        <module>echomind-agent</module>
        <module>echomind-agent-team</module>
        <module>echomind-console</module>
        <module>echomind-boot</module>
        <module>echomind-app</module>
        <module>echomind-user-memory</module>
        <module>skills/skill-weather</module>
        <module>skills/skill-calculator</module>
        <module>skills/skill-markdown-code</module>
        <module>skills/skill-date-query</module>
        <module>skills/skill-github-intel</module>
        <module>skills/skill-railway-12306</module>
        <module>skills/skill-travel-planning</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <spring-boot.version>3.5.14</spring-boot.version>
        <spring-ai.version>1.1.6</spring-ai.version>
        <spring-shell.version>3.3.3</spring-shell.version>

        <jackson.version>2.17.2</jackson.version>
        <okhttp.version>4.12.0</okhttp.version>
        <exp4j.version>0.4.8</exp4j.version>
        <h2.version>2.3.232</h2.version>
        <mysql.version>8.3.0</mysql.version>
        <mybatis-plus.version>3.5.7</mybatis-plus.version>
        <lombok.version>1.18.34</lombok.version>
        <knife4j.version>4.5.0</knife4j.version>
        <aliyun-oss.version>3.18.1</aliyun-oss.version>
        <pdfbox.version>2.0.31</pdfbox.version>
        <milvus-sdk.version>2.6.20</milvus-sdk.version>
        <opentelemetry.instrumentation.version>2.26.0</opentelemetry.instrumentation.version>

        <maven-surefire-plugin.version>3.3.1</maven-surefire-plugin.version>
        <maven-failsafe-plugin.version>3.3.1</maven-failsafe-plugin.version>
        <maven-jar-plugin.version>3.4.1</maven-jar-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.opentelemetry.instrumentation</groupId>
                <artifactId>opentelemetry-instrumentation-bom</artifactId>
                <version>${opentelemetry.instrumentation.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.shell</groupId>
                <artifactId>spring-shell-starter</artifactId>
                <version>${spring-shell.version}</version>
            </dependency>

            <!-- Internal modules -->
            <dependency>
                <groupId>com.echomind</groupId>
                <artifactId>echomind-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.echomind</groupId>
                <artifactId>echomind-llm</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.echomind</groupId>
                <artifactId>echomind-memory</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.echomind</groupId>
                <artifactId>echomind-mcp</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.echomind</groupId>
                <artifactId>echomind-skill-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.echomind</groupId>
                <artifactId>echomind-skill</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.echomind</groupId>
                <artifactId>echomind-agent</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.echomind</groupId>
                <artifactId>echomind-agent-team</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.echomind</groupId>
                <artifactId>echomind-console</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.echomind</groupId>
                <artifactId>echomind-boot</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.echomind</groupId>
                <artifactId>echomind-user-memory</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- External -->
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>${knife4j.version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${okhttp.version}</version>
            </dependency>
            <dependency>
                <groupId>net.objecthunter</groupId>
                <artifactId>exp4j</artifactId>
                <version>${exp4j.version}</version>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>${mysql.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-core</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.aliyun.oss</groupId>
                <artifactId>aliyun-sdk-oss</artifactId>
                <version>${aliyun-oss.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.pdfbox</groupId>
                <artifactId>pdfbox</artifactId>
                <version>${pdfbox.version}</version>
            </dependency>
            <dependency>
                <groupId>io.milvus</groupId>
                <artifactId>milvus-sdk-java</artifactId>
                <version>${milvus-sdk.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <source>17</source>
                        <target>17</target>
                        <release>17</release>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-failsafe-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven-jar-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>spring-snapshots</id>
            <name>Spring Snapshots</name>
            <url>https://repo.spring.io/snapshot</url>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
    </repositories>
</project>
